Update and rename rotate.md to 2019-09-03-rotate.md

--- a/_posts/2019-09-03-rotate.md
+++ b/_posts/2019-09-03-rotate.md
@@ -1,4 +1,28 @@
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> <script type="text/x-mathjax-config"> MathJax.Hub.Config({ tex2jax: { skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'], inlineMath: [['$','$']] } }); </script>
+---
+layout:     post
+title:      rotate wind
+subtitle:   rotate wind
+date:       2019-09-03
+author:     ZYC
+catalog: true
+comments: true
+tags:
+    - Ocean
+    - NWP
+    - Exercise
+---
+
+<head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+            tex2jax: {
+            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+            inlineMath: [['$','$']]
+            }
+        });
+    </script>
+</head>
 
 上次分享了一篇关于风向调整的文章，发现很多使用WARMS和WARR产品的小伙伴都没有注意这个问题。虽然也学习过这个代码，但是平时还是偷懒使用wrf_user_getvar直接获取。正好很多小伙伴问具体操作问题，借此梳理一下。水平有限，如有不足还请指正。
 
